# TelepromptHour

./: .gitignore  CMakeLists.txt  README.md  ressources.qrc
src/: MessageHandler.hpp  main.cpp
src/qml/: AddButton.qml  App.qml  SplashScreen.qml  StartPage.qml  main.qml
src/qml/Utils/: Colors.qml  qmldir
